--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "babylonjs": "3.1.1"
   },
   "devDependencies": {
-    "typescript": "2.6.2",
-    "electron-builder": "19.49.0",
-    "electron": "1.7.9"
+    "electron": "4.0.0",
+    "electron-builder": "20.38.5",
+    "typescript": "2.6.2"
   },
   "build": {
     "appId": "yourappid",
